--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -4,9 +4,13 @@
 
 .ant-menu-inline.ant-menu-root .ant-menu-item {
     display: inline-block;
-    width: 250px;;
+    width: 290px;
+
 }
+
+
 
 .ant-menu-item .ant-menu-item-icon, .ant-menu-submenu-title .ant-menu-item-icon, .ant-menu-item .anticon, .ant-menu-submenu-title .anticon {
     font-size: 22px;
+
 }
