--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@
 }
 
 #up h2 span {
-  margin: 40px 0 0 0;
+  margin: 40px 0 0 20px;
   text-align: left;
   color:  #00a0df;
   font-weight: normal;
